--- a/src/components/transaction-list/transaction-list.component.html
+++ b/src/components/transaction-list/transaction-list.component.html
@@ -27,8 +27,6 @@
             <div class="hidden sm:block text-sm text-right text-gray-500">
               @if (transaction.transactionType !== 'dividend') {
                 <span>{{ transaction.shares }} @ {{ transaction.sharePrice | currency:'EUR' }}</span>
-              } @else if (transaction.notes) {
-                <span class="truncate" title="{{transaction.notes}}">{{ transaction.notes }}</span>
               }
             </div>
 
@@ -52,10 +50,10 @@
         <li class="p-8 text-center">
           <div class="flex flex-col items-center">
             <svg class="w-16 h-16 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 7.5V6.108c0-1.135.845-2.098 1.976-2.192.353-.026.692-.026 1.038 0 .346.026.685.026 1.038 0 1.13.094 1.976 1.057 1.976 2.192v1.392m-.028 11.178H8.278a2.25 2.25 0 0 1-2.25-2.25v-8.25a2.25 2.25 0 0 1 2.25-2.25h7.5a2.25 2.25 0 0 1 2.25 2.25v8.25a2.25 2.25 0 0 1-2.25 2.25H16.5" />
+              <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 18 9 11.25l4.306 4.306a11.95 11.95 0 0 1 5.814-5.518l2.74-1.22m0 0-5.94-2.281m5.94 2.28-2.28 5.941" />
             </svg>
-            <h3 class="mt-4 text-xl font-semibold text-gray-900">No transactions found</h3>
-            <p class="mt-1 text-base text-gray-500">Your transaction history will appear here.</p>
+            <h3 class="mt-4 text-xl font-semibold text-gray-900">Your Investing Journey Begins!</h3>
+            <p class="mt-2 text-base text-gray-600 max-w-md mx-auto">This is the beginning of your journey as an investor. Start adding transactions and you will be able to see how your wealth starts to build in the Portfolio view.</p>
           </div>
         </li>
       }
