--- a/src/components/transactions-page/transactions-page.component.html
+++ b/src/components/transactions-page/transactions-page.component.html
@@ -11,7 +11,7 @@
       </div>
       <button 
         (click)="showNewTransactionRow()" 
-        [disabled]="isAddingTransaction()"
+        [disabled]="isAddingTransaction() || isLoading()"
         class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg shadow-md transition-colors duration-200 flex items-center gap-2 disabled:bg-indigo-400 disabled:cursor-not-allowed">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
@@ -19,11 +19,23 @@
         <span>New Transaction</span>
       </button>
     </header>
-    <app-transaction-list 
-      [transactions]="transactions()" 
-      [isAdding]="isAddingTransaction()"
-      (save)="saveTransaction($event)"
-      (cancel)="cancelNewTransaction()">
-    </app-transaction-list>
+
+    @if (isLoading() && !isAddingTransaction()) {
+       <div class="text-center py-10">
+        <p class="text-gray-500">Loading transactions...</p>
+      </div>
+    } @else if (error()) {
+       <div class="bg-red-50 border-l-4 border-red-400 p-4" role="alert">
+        <p class="font-bold text-red-800">Error</p>
+        <p class="text-red-700">{{ error() }}</p>
+      </div>
+    } @else {
+      <app-transaction-list 
+        [transactions]="transactions()" 
+        [isAdding]="isAddingTransaction()"
+        (save)="saveTransaction($event)"
+        (cancel)="cancelNewTransaction()">
+      </app-transaction-list>
+    }
   </div>
 </main>
