--- a/src/components/transactions-page/transactions-page.component.html
+++ b/src/components/transactions-page/transactions-page.component.html
@@ -9,15 +9,6 @@
           Transactions
         </h1>
       </div>
-      <button 
-        (click)="showNewTransactionRow()" 
-        [disabled]="isAddingTransaction() || isLoading()"
-        class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded-lg shadow-md transition-colors duration-200 flex items-center gap-2 disabled:bg-indigo-400 disabled:cursor-not-allowed">
-        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-          <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
-        </svg>
-        <span>New Transaction</span>
-      </button>
     </header>
 
     @if (isLoading() && !isAddingTransaction()) {
@@ -34,7 +25,9 @@
         [transactions]="transactions()" 
         [isAdding]="isAddingTransaction()"
         (save)="saveTransaction($event)"
-        (cancel)="cancelNewTransaction()">
+        (cancel)="cancelNewTransaction()"
+        (update)="updateTransaction($event)"
+        (delete)="deleteTransaction($event)">
       </app-transaction-list>
     }
   </div>
